--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body class="flex-column min-100-vh">
   <header class="hero">
     <h1 class="app-title">
-      <i class="fab fa-github"></i> Git it Done!
+      <i class="fas fa-drumstick-bite"></i> Recipes 4 U
     </h1>
-    <p>Search for a GitHub user or click on a language to see a list of repositories and how many open issues they have!
+    <p>Search for a recipe and learn how to make it!
     </p>
   </header>
 
@@ -25,26 +25,17 @@
     <div class="col-12 col-md-4">
 
       <div class="card">
-        <h3 class="card-header text-uppercase">Search By User</h3>
+        <h3 class="card-header text-uppercase">Search for Recipes</h3>
         <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Username</label>
+          <label class="form-label" for="username">Recipes</label>
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Get User</button>
+          <button type="submit" class="btn">Get recipe</button>
         </form>
       </div>
 
-      <div class="card">
-        <h3 class="card-header text-uppercase">Search By Topic</h3>
-        <div id="language-buttons" class="card-body">
-          <button data-language="javascript" class="btn">JavaScript</button>
-          <button data-language="html" class="btn">HTML</button>
-          <button data-language="css" class="btn">CSS</button>
-        </div>
-      </div>
-    </div>
 
     <div class="col-12 col-md-8">
-      <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
+      <h2 class="subtitle">Showing recipes for: <span id="repo-search-term"></span></h2>
       <div id="repos-container" class="list-group"></div>
     </div>
   </main>
