--- a/index.html
+++ b/index.html
@@ -21,24 +21,18 @@
   </header>
 
 
-  <main class="flex-row justify-space-between">
-    <div class="col-12 col-md-4">
-
-      <div class="card">
-        <h3 class="card-header text-uppercase">Search for Recipes</h3>
-        <form id="user-form" class="card-body">
-          <label class="form-label" for="username">Recipes</label>
-          <input name="username" id="username" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Get recipe</button>
-        </form>
+  <body>
+    <div class="container">
+      <div class="search-container">
+        <input
+          type="text"
+          placeholder="Type A Dish Name Here.."
+          id="user-inp"
+        />
+        <button id="search-btn">Search</button>
       </div>
-
-
-    <div class="col-12 col-md-8">
-      <h2 class="subtitle">Showing recipes for: <span id="repo-search-term"></span></h2>
-      <div id="repos-container" class="list-group"></div>
+      <div id="result"></div>
     </div>
-  </main>
 
   <script src="./assets/js/homepage.js"></script>
 </body>
