--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <p>Search for a recipe and learn how to make it!
     </p>
   </header>
-
-
-  <body>
-    <div class="container">
+  
+    <div class="card">
       <div class="search-container">
+        <label class="form-label" for="recipe">Recipes</label>
         <input
           type="text"
           placeholder="Type A Dish Name Here.."
