changes to the javascript and html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Git it Done</title>
+  <title>Recipes 4 U</title>
 </head>
 
 <body class="flex-column min-100-vh">
@@ -30,7 +30,16 @@
         />
         <button id="search-btn">Search</button>
       </div>
-      <div id="result"></div>
+      <div id="result">
+        <img/>
+        <div class="details">
+            <h2 id="meal"></h2>
+            <h4 id="area"></h4>
+        </div>
+        <div>
+            <p id="instructions"></p>
+        </div>
+      </div>
     </div>
 
   <script src="./assets/js/homepage.js"></script>
