fixes to javascipt and start of adding additional API

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           id="user-inp"
         />
         <button id="search-btn">Search</button>
+        <button id="search-btn-two">Search for Recipes</button>
       </div>
       <div id="result">
         <img/>
@@ -38,6 +39,9 @@
         </div>
         <div>
             <p id="instructions"></p>
+        </div>
+        <div>
+          <p id="results-div"></p> 
         </div>
       </div>
     </div>
