added Edamam API and button to recieve its information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           id="user-inp"
         />
         <button id="search-btn">Search</button>
-        <button id="search-btn-two">Search for Recipes</button>
+        <button id="search-btn-two">Search for Calories</button>
       </div>
       <div id="result">
         <img/>
@@ -40,8 +40,7 @@
         <div>
             <p id="instructions"></p>
         </div>
-        <div>
-          <p id="results-div"></p> 
+        <div id="results-div">
         </div>
       </div>
     </div>
