--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <!-- Importing Font Awesome CSS framwork for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Recipes 4 U</title>
 </head>
 
-<body class="flex-column min-100-vh">
+<body>
   <header class="hero">
     <h1 class="app-title">
       <i class="fas fa-drumstick-bite"></i> Recipes 4 U
@@ -40,11 +40,10 @@
         <div>
             <p id="instructions"></p>
         </div>
-        <div id="results-div">
-        </div>
       </div>
     </div>
-
+        <div id="results-div">
+        </div>
   <script src="./assets/js/homepage.js"></script>
 </body>
 
