added html ID for previous search

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           placeholder="Type A Dish Name Here.."
           id="user-inp"
         />
+        <div>
+          <p id="previous-search"></p>
+
+        </div>
         <button class="search-btn"id="search-btn">Search</button>
         <button class="search-btn" id="search-btn-two">Search for Calories</button>
       </div>
